# FastAPI-Project-Structure

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt  run.py
app/: main.py
app/api/v1/: router.py
app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py
app/utils/: dependencies.py  security.py
blank-fastapi-venv/: pyvenv.cfg
blank-fastapi-venv/Scripts/: activate  activate.bat
